@@ -10,6 +10,9 @@ Bug Fixes
 * LUCENE-6482: Fix class loading deadlock relating to Codec initialization,
   default codec and SPI discovery.  (Shikhar Bhushan, Uwe Schindler)
 
+* LUCENE-6523: NRT readers now reflect a new commit even if there is
+  no change to the commit user data (Mike McCandless)
+
 ======================= Lucene 5.2.0 =======================
 
 New Features
